// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IntermittentLeaveSchedule renders a regular intermittent leave period 1`] = `
<tr>
  <th
    scope="row"
  />
  <td>
    Intermittent leave
  </td>
  <td>
    <div>
      <Trans
        components={
          Object {
            "contact-center-phone-link": <a
              href="tel:(833) 344-7365"
            />,
          }
        }
        i18nKey="components.employersIntermittentLeaveSchedule.lead"
        tOptions={
          Object {
            "context": "noDocs",
          }
        }
      />
    </div>
  </td>
</tr>
`;

exports[`IntermittentLeaveSchedule renders an irregular intermittent leave period 1`] = `
<tr>
  <th
    scope="row"
  />
  <td>
    Intermittent leave
  </td>
  <td>
    <div>
      <Trans
        components={
          Object {
            "contact-center-phone-link": <a
              href="tel:(833) 344-7365"
            />,
          }
        }
        i18nKey="components.employersIntermittentLeaveSchedule.lead"
        tOptions={
          Object {
            "context": "noDocs",
          }
        }
      />
    </div>
  </td>
</tr>
`;

exports[`IntermittentLeaveSchedule renders an irregular intermittent leave period 2`] = `
Array [
  "Contact us at ",
  <a
    href="tel:(833) 344-7365"
    key="1"
  >
    (833) 344‑7365
  </a>,
  " for details about the leave schedule.",
]
`;

exports[`IntermittentLeaveSchedule renders correct text with documents 1`] = `
Array [
  "Download the attached documentation or contact us at ",
  <a
    href="tel:(833) 344-7365"
    key="1"
  >
    (833) 344‑7365
  </a>,
  " for details about the leave schedule.",
]
`;

exports[`IntermittentLeaveSchedule renders correct text without documents 1`] = `
Array [
  "Contact us at ",
  <a
    href="tel:(833) 344-7365"
    key="1"
  >
    (833) 344‑7365
  </a>,
  " for details about the leave schedule.",
]
`;
